--- a/src/Makefile.qt.include
+++ b/src/Makefile.qt.include
@@ -286,6 +286,9 @@ RES_ICONS = \
   qt/res/icons/bitcoin_regtest.png \
   qt/res/icons/lock_closed.png \
   qt/res/icons/lock_open.png \
+  qt/res/icons/tx_input.png \
+  qt/res/icons/tx_output.png \
+  qt/res/icons/tx_inout.png \
   qt/res/icons/overview.png \
   qt/res/icons/ic-transaction-received.svg \
   qt/res/icons/ic-transaction-mint.svg \
@@ -302,8 +305,7 @@ RES_ICONS = \
   qt/deviant/res/img/ic-nav-cold-staking-active.svg \
   qt/deviant/res/img/ic-nav-dashboard-active.svg \
   qt/deviant/res/img/ic-wallet-status-locked.svg \
-  qt/deviant/res/img/bg-splash.png \
-  qt/deviant/res/img/bg-splash.png \
+  qt/deviant/res/img/bg-splash.gif \
   qt/deviant/res/img/ic-check-mint.svg \
   qt/deviant/res/img/ic-nav-dashboard-hover.svg \
   qt/deviant/res/img/ic-wallet-status-staking.svg \
