--- a/contrib/gitian-descriptors/gitian-osx.yml
+++ b/contrib/gitian-descriptors/gitian-osx.yml
@@ -32,7 +32,7 @@ remotes:
 - "url": "https://github.com/deviant/deviant.git"
   "dir": "deviant"
 files:
-- "Xcode-13.2.1-13C100-extracted-SDK-with-libcxx-headers.tar.gz"
+- "MacOSX11.3.sdk.tar.gz"
 script: |
   set -e -o pipefail
 
@@ -91,7 +91,7 @@ script: |
   BASEPREFIX=`pwd`/depends
 
   mkdir -p ${BASEPREFIX}/SDKs
-  tar -C ${BASEPREFIX}/SDKs -xf ${BUILD_DIR}/Xcode-13.2.1-13C100-extracted-SDK-with-libcxx-headers.tar.gz
+  tar -C ${BASEPREFIX}/SDKs -xf ${BUILD_DIR}/MacOSX11.3.sdk.tar.gz
 
   # Build dependencies for each host
   for i in $HOSTS; do
